Revision history for Perl extension Mojo-Feed

{{$NEXT}}

0.15 2018-04-03T03:54:50Z

    - Fix version string in plugin for PAUSE indexer

0.14 2018-04-02T21:10:45Z

    - Add backwards-compatible new version of Mojolicious::Plugin::FeedReader, using Mojo::Feed::Reader

0.13 2018-04-01T17:02:43Z

    - original version (Mojo::Feed, refactoring of Mojolicious::Plugin::FeedReader into standalone module)

Revision history for perl module Mojolicious::Plugin::FeedReader

0.12 2018-02-28

   - Add support for enclosures (Mario Domgoergen)

0.11 2018-02-26

   - Remove dependency on Mojolicious::Controller, allow direct use

0.10 2017-11-08

   - decode text before using Mojo::DOM (Uses either UTF-8 or charset from HTTP response)

0.09 2017-08-28

   - Replace use of removed Mojo::Util function slurp() with Mojo::File

0.08 2016-05-29

   - Fix missing use statement in 2 tests. Thanks CPAN testers!

0.07 2015-03-01

   - Made small adjustment to accommodate Mojolicious 6.0 changes.

0.06 2014-12-24

   - Removed use of Mojo::Collection::pluck, deprecated in Mojolicious 5.57
   - Fix test depending on absolute url of test server. Thanks CPAN testers!

0.05 2014-10-28

   - Fixed possible bug revealed by Mojolicious 5.54 changes. Thanks CPAN testers!
   - Added parse_opml helper.

0.04 2014-05-09

  - Fixed test broken by Mojolicious changes

0.03 2014-04-03

  - The helper parse_feed introduced as an alias (and future replacement) for parse_rss
  - Calling parse_feed with a Mojo::DOM is not recommended because of encoding issues
  - some re-writing of how a Mojo::DOM is created from the input (no interface change)